--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "test": "vitest",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "build": "nuxt build",
@@ -20,6 +21,11 @@
     "vue-router": "latest"
   },
   "devDependencies": {
-    "@dotenvx/dotenvx": "^1.24.4"
+    "@dotenvx/dotenvx": "^1.24.4",
+    "@nuxt/test-utils": "^3.14.4",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^15.11.6",
+    "playwright-core": "^1.49.0",
+    "vitest": "^2.1.5"
   }
 }
