--- a/package.json
+++ b/package.json
@@ -15,17 +15,22 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^0.7.1",
+    "@nuxtjs/tailwindcss": "^6.12.2",
     "nuxt": "^3.14.1592",
     "nuxt-mongoose": "^1.0.6",
+    "primevue": "^4.2.2",
+    "tailwindcss-primeui": "^0.3.4",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.24.4",
     "@nuxt/test-utils": "^3.14.4",
+    "@primevue/nuxt-module": "^4.2.2",
     "@vue/test-utils": "^2.4.6",
     "happy-dom": "^15.11.6",
     "playwright-core": "^1.49.0",
+    "postcss-import": "^16.1.0",
     "vitest": "^2.1.5"
   }
 }
