--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@nuxt/eslint": "^0.7.1",
     "@nuxtjs/tailwindcss": "^6.12.2",
+    "date-fns": "^4.1.0",
     "nuxt": "^3.14.1592",
     "nuxt-mongoose": "^1.0.6",
     "primevue": "^4.2.2",
