--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@dotenvx/dotenvx": "^1.24.4",
     "@nuxt/test-utils": "^3.14.4",
     "@primevue/nuxt-module": "^4.2.2",
+    "@testing-library/vue": "^8.1.0",
     "@vue/test-utils": "^2.4.6",
     "happy-dom": "^15.11.6",
     "playwright-core": "^1.49.0",
